--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,41 @@
-trainset filter=lfs diff=lfs merge=lfs -text
+trainset/actin/14.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/30.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/3.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin filter=lfs diff=lfs merge=lfs -text
+trainset/actin/11.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/1.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/22.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/33.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/35.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/9.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/16.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/18.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/28.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/39.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/5.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/8.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/12.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/20.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/21.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/34.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/7.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/0.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/10.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/13.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/17.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/2.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/36.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/19.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/29.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/32.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/37.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/6.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/24.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/25.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/26.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/31.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/38.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/15.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/23.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/27.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/actin/4.h5 filter=lfs diff=lfs merge=lfs -text
