--- a/.gitattributes
+++ b/.gitattributes
@@ -39,3 +39,38 @@ trainset/actin/15.h5 filter=lfs diff=lfs merge=lfs -text
 trainset/actin/23.h5 filter=lfs diff=lfs merge=lfs -text
 trainset/actin/27.h5 filter=lfs diff=lfs merge=lfs -text
 trainset/actin/4.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/14.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/18.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/3.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/4.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/10.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/32.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/8.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/20.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/26.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/29.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/12.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/1.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/21.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/30.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/5.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/7.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/15.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/23.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/31.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/9.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/13.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/16.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/17.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/11.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/19.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/25.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/2.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/6.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/0.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/22.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/24.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/27.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/28.h5 filter=lfs diff=lfs merge=lfs -text
+trainset/nuc/33.h5 filter=lfs diff=lfs merge=lfs -text
